css/about.css
@font-face
{
font-family: 'Oswald';
src: url(../fonts/Oswald-Regular.ttf);
}

@font-face
{
font-family: 'Duru Sans';
src: url(../fonts/DuruSans-Regular.ttf);
}

@font-face
{
font-family: 'Lora';
src: url(../fonts/Lora-Regular.ttf);
}

/*  mainNav */
#mainNav {
  position: fixed;     
  -webkit-transform: translateZ(0); 
  top:0;
  right: 0; 
  width: 100%;
  height:40px;
  margin: 0px 0px 0px 0px;   
  text-align: right;   
  display: inline-block;  
  /*background-color: white;*/
  background-color:rgba(255,255,255,0.65);
} 

.animatedButton {
  height: 30px;
  width: 90px;
  position: relative;
  display:inline;
  text-decoration: none;
  padding-left: 10px;
}

#homelogo {
  left: 10px;
  height:30px;
  width: auto;
  position: fixed;
  padding: 5px 0px 0px 15px;
}
/*  mainNav */

#mainPage {
  background-color: #fff;
  width: 100%;
  position: relative;
  display: block;
  height: auto;
}

p {
  font-family: 'Duru Sans', sans-serif;
  font-size: 18px; 
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  color: #7f7f7f;
  line-height: 40px;
}

h1 {
  font-family: 'Duru Sans', sans-serif;
  font-size: 25px; 
  color: #7f7f7f;
  line-height: 80px;
  text-align: left;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
}

h2 {
  position: relative;
  color: #7f7f7f;
  font-family: 'Duru Sans', sans-serif;
  font-size: 20px; 
  display: block;
  margin-left: 40px;
  -webkit-margin-before: 0em;
  -webkit-margin-after: 0em;
}

h3 {
  position: relative;
  color: #7f7f7f;
  font-family: 'Lora', serif;
  font-size: 45px; 
  display: block;
  margin-left: 20px;
  -webkit-margin-before: 0em;
  -webkit-margin-after: 0em;
}

#renewwText {
  font-family: 'Duru Sans', sans-serif;
  font-size: 42px; 
}

#houseRendering {
  position:relative;
  display: block;
  margin-left: auto;
  margin-right: 0px;
  width: 75%;
  padding-top: 25px;
  margin-bottom: -50px;
  z-index: 1000;
  content:url("../images/house-rendering1.png");
}

#titleBlock {
  background-color: #f8f8f8;
  position: absolute;
  bottom: 50px;
  width: 100%;
  height: 150px;
}

#titleAnchor {
  position: absolute;
  /*bottom: 0px;*/
  bottom: 30px;
}

#bannerWrapper {
  position: relative;
  background-color: #f2f2f2;
}

.cutout {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#about {
  background-color: #b2e0fc;
}

#sustainabilityWrapper {
  background-color: #fff;
  border-radius:10px; 
}

#sustainabilityLogo {
  width: 200px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#textWrapper {
  display: block;
  position: relative;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.centered {
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  /*padding-top: 30px;*/
}

.spacer {
  width: 100%;
  background-color: white;
  height: 3px;
}

.section {
  display: block;
  clear: both;
  padding-bottom: 100px;
  float: left;
  width: 100%;
}
  .primary {
    background-color: #c5ecba;
  }
  .secondary {
    background-color: #d9d9d9;
  }
  .tertiary {
    background-color: #b2e0fc;
  }
  .sectionImg {
    /*height: 200px;*/
    width: 300px;
    float: left;
    margin-bottom: 25px;
    margin-right: 25px;
    border-radius:3px;
    display: inline-block;
    position: relative;
    clear: both;
  }
  .aboutText {
    text-align: left;
    color: #7f7f7f;
    font-size: 18px;
    line-height: 35px;
    display: block;
    position: relative;
    overflow: auto;
  }

#aboutMission {
  padding-bottom: 40px;
  text-align: justify;
  width: 80%;
  margin-right: auto;
  margin-left: auto;
}

